@@ -107,7 +107,7 @@ void LineEdit::contextMenuEvent( QContextMenuEvent * e )
 bool LineEdit::isFunctionSupported(int f)
 {
   return f == DCOP::text || f == DCOP::setText || f == DCOP::selection || f == DCOP::setSelection ||
-    f == DCOP::clear || f == DCOP::setEditable;
+    f == DCOP::clear || f == DCOP::setEditable || f == DCOP::geometry || f == DCOP::hasFocus ;
 }
 
 QString LineEdit::handleDCOP(int function, const QStringList& args)
@@ -128,6 +128,15 @@ QString LineEdit::handleDCOP(int function, const QStringList& args)
       break;
     case DCOP::setEditable:
       setReadOnly(args[0] == "false" || args[0] == "0");
+      break;
+    case DCOP::geometry:
+    {
+      QString geo = QString::number(this->x())+" "+QString::number(this->y())+" "+QString::number(this->width())+" "+QString::number(this->height());
+      return geo;
+      break;
+    }
+    case DCOP::hasFocus:
+      return QString::number(this->hasFocus());
       break;
     default:
       return KommanderWidget::handleDCOP(function, args);
