@@ -1,3 +1,8 @@
+2008-04-14 - Eric Laffoon <sequitur@kde.org>
+    o added cut, copy and paste to editor popup menu
+    o added hasFocus widget function 
+    o added file exists function
+    0 added geometry and has focus to primary data widgets
 2008-03-28 - Eric Laffoon <sequitur@kde.org>
     o added test geometry function to buttons for popup use
 2008-03-23 - Eric Laffoon <sequitur@kde.org>
